--- a/HatBdFontend/src/pages/checkout/checkout.component.html
+++ b/HatBdFontend/src/pages/checkout/checkout.component.html
@@ -81,6 +81,7 @@
           <select class="form-select mb-3" [(ngModel)]="paymentMethod" (change)="resetPaymentStep()">
             <option value>-- Select Payment Method --</option>
             <option value="Bkash">bKash</option>
+            <option value="CashOnDelivery">Cash On Delivery</option>
             <!-- <option value="Nagad">Nagad</option>
             <option value="Card">Debit / Credit Card</option> -->
           </select>
