--- a/HatBdFontend/src/app/Seller/rider/rider-layout/rider-layout.component.html
+++ b/HatBdFontend/src/app/Seller/rider/rider-layout/rider-layout.component.html
@@ -43,7 +43,8 @@
 
     <!-- Page Content -->
     <main class="content" role="main">
-      <h2 class="title">Assigned Orders</h2>
+      <router-outlet></router-outlet>
+      <!-- <h2 class="title">Assigned Orders</h2>
 
       <div class="order-list">
         <div class="order-card" *ngFor="let o of assignedOrders">
@@ -59,7 +60,7 @@
             </span>
           </div>
         </div>
-      </div>
+      </div> -->
     </main>
 
   </div>
